test/compile-fail/resolution/use/crate/expected.txt
error: `crate` in paths can only be used in the start position
 --> top.rhdl:2:7
  |
2 | use a::crate;
  |        ^^^^^ `crate` in paths can only be used in the start position
